# axum-rest-template

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml
src/: config.rs  lib.rs  main.rs
src/user/: errors.rs  mod.rs  router.rs
