[package]
name = "axum-rest-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenv = "0.15.0"
clap = { version = "4.4.10", features = ["derive", "env"] }
